# vehicle-ecs-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: can_interface.hpp  controller.hpp  diagnostics_manager.hpp  logger.hpp  sensor_manager.hpp  state_machine.hpp  types.hpp
src/: can_interface.cpp  controller.cpp  diagnostics_manager.cpp  logger.cpp  main.cpp  sensor_manager.cpp  state_machine.cpp
